letters/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: simple-app-the-service
  selfLink: /api/v1/namespaces/simple-app/services/simple-app-the-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: hello
    variant: simple-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
