letters/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  name: letter
  selfLink: /apis/route.openshift.io/v1/namespaces/simple-app/routes/letter
spec:
  host: letter-simple-app.apps.east1.aws.demo-sysdeseng.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: simple-app-the-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
